# ChangeLog for sys-devel/binutils
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.476 2012/12/29 20:58:39 vapier Exp $

*binutils-2.23.51.0.8 (29 Dec 2012)

  29 Dec 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.51.0.8.ebuild:
  Version bump #449124 by Arfrever Frehtes Taifersar Arahesis.

*binutils-2.23.51.0.7 (20 Dec 2012)

  20 Dec 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.51.0.7.ebuild:
  Version bump.

*binutils-2.23.51.0.6 (26 Nov 2012)

  26 Nov 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.51.0.6.ebuild:
  Version bump.

*binutils-2.23.1 (15 Nov 2012)

  15 Nov 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.1.ebuild:
  Version bump.

*binutils-2.23.51.0.5 (13 Nov 2012)

  13 Nov 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.51.0.5.ebuild:
  Version bump.

  02 Nov 2012; Mike Frysinger <vapier@gentoo.org> binutils-2.23.51.0.3.ebuild,
  binutils-2.23.ebuild:
  Drop ld sysroot patch since upstream has merged a proper fix.

*binutils-2.23 (24 Oct 2012)

  24 Oct 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.ebuild:
  Version bump.

  29 Sep 2012; Raúl Porcel <armin76@gentoo.org> binutils-2.22-r1.ebuild:
  alpha/ia64/sh/sparc stable wrt #414865

*binutils-2.23.51.0.3 (19 Sep 2012)

  19 Sep 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.51.0.3.ebuild:
  Version bump.

*binutils-2.23.51.0.2 (11 Sep 2012)

  11 Sep 2012; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.51.0.2.ebuild:
  Version bump.

  22 Aug 2012; Michael Weber <xmw@gentoo.org> binutils-2.22-r1.ebuild:
  ppc stable (bug 414865).

  10 Aug 2012; Mike Frysinger <vapier@gentoo.org> binutils-2.22-r1.ebuild:
  Build with -fPIC on s390x #430554 by Raúl Porcel.

  08 Aug 2012; Mike Frysinger <vapier@gentoo.org> binutils-2.23.51.0.1.ebuild:
  Fix applying of lib32 patch as reported by Arfrever.

*binutils-2.23.51.0.1 (07 Aug 2012)
