@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile install postinst postrm test unpack
+DEPEND=sys-devel/gnuconfig >=sys-devel/binutils-config-1.9 zlib? ( sys-libs/zlib ) test? ( dev-util/dejagnu ) nls? ( sys-devel/gettext ) sys-devel/flex virtual/yacc
+DESCRIPTION=Tools necessary to build programs
+HOMEPAGE=http://sources.redhat.com/binutils/
+IUSE=cxx nls multitarget multislot static-libs test vanilla zlib
+LICENSE=|| ( GPL-3 LGPL-3 )
+RDEPEND=>=sys-devel/binutils-config-1.9 zlib? ( sys-libs/zlib )
+SLOT=0
+SRC_URI=mirror://kernel/linux/devel/binutils/binutils-2.23.51.0.9.tar.xz mirror://gentoo/binutils-2.23.51.0.9-patches-1.0.tar.xz http://dev.gentoo.org/~vapier/dist/binutils-2.23.51.0.9-patches-1.0.tar.xz
+_eclasses_=eutils	d40dc948067bd3db1c8ebf7d51897313	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	gnuconfig	c0f61749b1cea36288502e3497dcd6ac	libtool	2b273eea1976cfaed3449345d94331ac	multilib	ded93e450747134a079e647d888aa80b	toolchain-binutils	0d43818decd52aaa52eba1b9f65a4e8f	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	unpacker	50e1227854e96469a19a63f053496328	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=82f571f7abaf2aafc59a181a1d14456d
