@@ -31,6 +31,8 @@ DIST binutils-2.23.51.0.7-patches-1.0.tar.xz 10716 SHA256 24b434c1f7971c538b4334
 DIST binutils-2.23.51.0.7.tar.xz 13909920 SHA256 0750601b16d7ff04bf2c60bdaafdcef58413d7804c80458d390fc79c1d731370 SHA512 9cc568a96baed66abbacc8b95cb27db6f05ecc3156add632f6bed404ac0e507eccad6424a46eb4825f47b5994cd700d17e11d4fdd9ce27c4d41f3a063c737b29 WHIRLPOOL b92c54d376763c48a160f1583f59217a87529f664abe58ded0b81804905a3aaf4e36cfdb615dc9eee9831ae295131ac0d447b046d3cc6963dafe6d002a03b16d
 DIST binutils-2.23.51.0.8-patches-1.0.tar.xz 10712 SHA256 1a0bd1500c87089e6609e97697912bd00fd44ac35fd9711c9c7b4267ede34cc0 SHA512 47f22c94fc387409c04d826db7592e1bddb991a990af108e21126ba5dc117740d1e87fa2178f51cc5c73c1b3f0fef55eda36308a722d1d9673a5ba639115995e WHIRLPOOL 2efba9385d71c07055be90c9aedfcd0180d47197a08563df1ba6abd5802852624ec4e6837c86e8f809ce485f90d2644038b35c0d6a366e4712038eebc117e3a9
 DIST binutils-2.23.51.0.8.tar.xz 13922836 SHA256 e345d7b7a14eb903074311a986d2a93af849b83799e3a5aa13308615a01eaf1e SHA512 8124974114398cc1fc88eb5681bfea8369371a2636da5d0ed7993cba43462edea9cc3ddfed30bf7bf7d13c2981cfece39da30a019093a5f9d7935b5b57373aad WHIRLPOOL adfe57a30fd72544a8e7ece1cf6a40f19ff08d237964c40591a3f50eb81acbb687b53d94ab3f491807cb599a691575ca77c3171fc67b9effc959d04490ca26e3
+DIST binutils-2.23.51.0.9-patches-1.0.tar.xz 11572 SHA256 1b1c89d205ae5a2bc8f4364c3ed945c88d496aee49c8d8e4790a7a49ba6efa2e SHA512 88877fbe4ed3fd6ee10c041272d6f457428d7794f6441e8eb3252b77b563b4a2a7dab5277e8faa3c5a8f65daf6fa78a17c625c597a23bdabe08a4a644f8ca4d6 WHIRLPOOL 7d10eab0fa722c0061936d152794483b4beef42b6b9003e9a0298ac0b9b4366d35f5236422269a93ddba99dd4b4c06a5d3667f9a09b1e41e1eb83de8988c0bbf
+DIST binutils-2.23.51.0.9.tar.xz 14276492 SHA256 f877e2a2333d96b2b36eea7fbe150c3a3ebdf0dc580a1d9423822179ad7d839f SHA512 d858d108f5c910a76239c8e87a19a75437a8bff22a7e9ec27aecb99adce5e8a4e107e6519f5f7bedbcb8c4ccaaade1d4ddb474cc85c2d87dfa9a801a41f2f001 WHIRLPOOL 71f047b093dfb0402930221722f816e5f86f9e3e0d79121a2b72bcd31f2c25b488f23537e69a6d36c812b661070c99b2f0c88348c2ed0e11044e60c60c4fbd17
 DIST binutils-2.23.tar.bz2 21402046 SHA256 5f975e744a0fd4a4ab0b28dd6d0921685b3279207823226df92429389dbee452 SHA512 079939e1000e358e830c4563543f2a00ae127ef6e18306eda55a775254509951114d24647cf2c3fef49ac4409c8e9895085efb85cc71566a5b4fe0106b8375bd WHIRLPOOL 3713090b5f0d2b6fec14664ce862e0c7c7eeb0bf37bde19e4d07a48bafb61d388929e6ae993a6954aa6432fea9484b4646bc2938df308bcbf6142a0d5dfc1f69
 EBUILD binutils-2.19.1-r1.ebuild 391 SHA256 d1dd811419e6d40106faa70d8f8d44b9cf0ec7c45c15e041e723f4b97a747f04 SHA512 356d1bc4da50e4c04ebf95a6315100e33cd2664b69346985254068c09f669fbea54e0d04306b03ab142299575368bd9cab202b814a42286ddcbd81f8cf239a0c WHIRLPOOL c91c6870db927a7f0d27eaf8d666c036b858fdfadf3be75b66e861561dd40ed062efdfa82f71c03dcd6a68491653a0380a7b878d02a3454386d7c6d159ce4548
 EBUILD binutils-2.20.1-r1.ebuild 397 SHA256 3368bd7d706c269325e8d54d132b6805ec40402e6dd75be8e53d5f8a7f85c326 SHA512 556ba373108cb5d583b15b5759e7f201f8119fe00dc8f70c3564b3af5829b7fb73726a7dd8663dc9d0495ad2a809c0d41bcd7696e7627694eddcaa0da18ca504 WHIRLPOOL d04e9a608c203e8eb6df0c688b0c4563d9a6c3a17f865378253bef9bf6fd3f177b826d9f0b1c6b93d82aa3d33b29b52ec3fb9916da294497c6710c81f51ee7da
@@ -46,24 +48,25 @@ EBUILD binutils-2.23.51.0.5.ebuild 286 SHA256 8363be4e721d1d9857af4de071d95fc212
 EBUILD binutils-2.23.51.0.6.ebuild 286 SHA256 38d71c20eaddfbc4e8072179e70575611c3232fa4a3fc48bee02a86b433ab871 SHA512 7a111b25a21bc58dc2d7b8fe9c0fe985f07872831cb9e0dfe22957886946923850774228ff73cacb85276f5fdaf108dc66032eb0d728e5a68f7baab0fa88cd5b WHIRLPOOL d187c61aefef896e921d379d379bea24ee90903da3c23c0474abef04c023e07a74bb716b7b7f3f598cbaf18580661456be6df72e9d26ff9cf54c70ec1162ccda
 EBUILD binutils-2.23.51.0.7.ebuild 286 SHA256 3c79ddc4150107a832470b8db009c69520b1b9a8ca118874ad6f1fa1d0f4e2e7 SHA512 da38617caa4799ecc7e7173d844cd0093535da4a652b2327e4d171fb6eb6a35e46f7082c2dcbf7be2f541ae16fd88961c8b69c52fbd80fd5b32f2b012c8f30f1 WHIRLPOOL 9f5b30d4acf05f73f92943ce2c99ff9911728149353019829bbcf03ff2901a970d570ec18047cf9fda9c7330de3012a51b40105a4b27311610fac42850beb818
 EBUILD binutils-2.23.51.0.8.ebuild 286 SHA256 13668d99538768eb67f38778228a3ce50ecda2207b0928044df5c3be761db054 SHA512 20c4ebd880804c185aa566d127990654fb54de4f64388d97927b6a87f562347f44b565e63c7cc9ce232f734721c9ac6b5fad514c18ceb94f69d41fe1ffbf5e1e WHIRLPOOL 7713532b2e2b95aa29e2957ebfd6ffb5482ab123da4ace0ce19aac1232b1335d937dc65f58face61c630cdf4baf1f19db342704e0d39818992c2581c1a42ed80
+EBUILD binutils-2.23.51.0.9.ebuild 286 SHA256 40b35395cc44b306734e089b1251fe98f5edfa74e178b35384b6ac416c70c6ef SHA512 d00dd918701b45c491905eb180c0a950807ccb7626cc31f51a1ad3f8484c72ebf2880b7bff3af3a87d348ee4e5c1e00db0e9ed04653cb55dead34ebd5157ab45 WHIRLPOOL 5bd9c571fad522eb0408e69f9c87d5ec4750a1b721dd8330be69c53c6a3b0152f8c883678dbff28469757b9f742e8ef47da2561b893d75f08e469b46c459638a
 EBUILD binutils-2.23.ebuild 402 SHA256 021c748078f780cbb27e83bb6411f4f95b8eb79bf5891c64d2c00cf4e5c2a1a8 SHA512 4d8459574672b977f97f901267a03908e1fd3cc457e7cb713a395e7495aa7c251e3a5a45aea1a85c0a67934a202ae76341fd78a0198aefe9a2f8184dcaf65d90 WHIRLPOOL 60849ae6c1e26f8d6bf744af497b92b79c477315ebc1c5ed0f11dc5bf85555895bf52395ce6f75180d3acf8476a830c7736b6908ed817e5ffbd8db53d3274ab6
 EBUILD binutils-9999.ebuild 249 SHA256 b93901e9baa2941f72f870e017c611992e6b33e24cb1d0f190e346cd58cac249 SHA512 aa40a9184aae0e47ad640d5e25bfb2c705e993cd534f142e70cd4be6e96781950c9cbe316b02fae5fe00c8b24e57ed87fee7b78c19e9feea4ecf141d33007323 WHIRLPOOL cbe7cc85a657740397047e305df39c3938efe7f4194ed116ba50dfd3e335a0f01d624fe48e7dfac9202867d6b1f89895a6b9c79893794b4bd909494acb6b81c0
-MISC ChangeLog 78799 SHA256 2a13a40a448e535f45bc338b7e1b86832fc4f0cee0a01198525c94bf3c399a16 SHA512 a5142c432c8d50a5fd14d0a9b5e14ecd82991c06cb8e8e49df87170fbdeae0d8e9bcaba1477ec5e804bf6fd81692dd18746cfcff70cae925ddd6cba0fbeb7d70 WHIRLPOOL 2ce1558f112d67fe6742a6c699fc1c733893d5c84b7522ac0ef2d2d8ce01a0933aec9df2943cae4a0a48196567e4504b3a4ed6acaeffbfa57940b3c68bd663c2
+MISC ChangeLog 78933 SHA256 2c539e8422c95278d9be176c72904a088e72b1955aa8630adb992c68f34001fe SHA512 e0afd99979776fd7c05a9cda6d300e7f1093eb007fb8ae881a2299bac4387d96205750bd87ef5d9fd5ea606cb37cbf99bf6dd134767ad1ee9f4ed94fd29a995e WHIRLPOOL edf30fc181af48ff04424e2274411ea241d29ac9ad8441272d0ddab7f515fbdbecc0aa64b5b2f2fecf91410e38a9b18c920fe0f83ef020ba8f9058b663772fbc
 MISC metadata.xml 386 SHA256 58db91727c014c22db0fde315c25cb22c59dc5c15af5d30ee4c01a248500b67c SHA512 f5c6d289f0018d0eeb4ebb2fbbfda7c08aa70a98771f1c0795838137a0e3b848fc9e2b2355cbc7367a72dc00dd5e0a946c0eb5349a86eb3796af43918961733a WHIRLPOOL 92b3371b27092dbaed212837f544b059d5b0b2c547ef8c965836ac1dab1cdee198bb6ab63ab495eccdd1be1c1f5ce9e93624722a9ffd433a7615be202134336a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQ31nKAAoJELEHsLL7fEFW4sIQAJF3eohNrzt8QfuibH7P9rST
-KXpghLU+ABEYwUSmBqJlCkUWgWlGts9FqZy8mdNSgR3DZV3QBB4fwNfxc95feGZl
-eeT/vPmChN7oC2JZoml+N6+q9Igtw4FRcFZ7iMAcATj49KBBjrljzME7oiI2X9TH
-D4xkLdRYjyJpu+ZJbt4aqHW+5U0L+5awxKWRZZCIUM3G9Rg/YnJMuruDHKgWnR95
-FT7NAEWWTvhUvzl6sG4FPPSadg23elxL8GSq1CLEqgCbAPuMJubjI+c2KiIm182D
-Bq4iKel9r+xgxLVl76k+mKhX41LNmXpySE3IEXwGRsAbYyvce15ZaA0ZidnsaN8G
-aeOcfZTE8QIq9aozAZu09HOyHCOJv8a56ewRqXKkVBV0dQOoreNtZ9Xzpk9PAcO8
-3kN9z2zQgsUCtbvHLsbrzEn4RtOc8sB7ET3ItwwAVa5cVmsvnmbIID0rs5T7nZwp
-t6J/aCQA5kGIZZYvNzzDOed7YI42N8p/T5Y8AIpZCFlX2AHHCD0uv0eDbe80+R73
-tpCBM978Bhbys4a6fDath7ujNyTbRL4fWsD1B7UhB+jgRlkwQ5yZ3GBNkKZaeL+D
-Gh6cuNNkBwzaYyBU4pvsGWt9ZJWNOV+eRe73nn3DdBLu1OO8aRczu7hIIaCLiiWP
-ldjgNivcB5JIparEIY5y
-=1oNz
+iQIcBAEBCAAGBQJRDgQgAAoJELEHsLL7fEFWoKoP/02ibFgfdskrq7i5JUDzxcKA
+uEvsn9KKuNrZ1UFiA2YvlZldKXTEHLvJd7ITWZc3gDJ1fAaW9P6m3aneCbqipc06
+tIi/5mRbhd9uR1x9KqG03wnx8GkINisvO//PW5vjqQMNChb9kXlZuHCkp3TV0TqZ
+TAy6zrEK2OWGPG0FOfyciaLKDHfmOWSPJJmPxDrbETDA3EfIFvH8nU6v8PpMHqz6
+4itsNow+n65wU6gHU0/dNBQ42eQJj/Af6ngl2QGo2SfZ6VnJyZK1p3C/lnB4NGVX
+pIc7R221aZm1e5yPL9Vd17woDLc+a1uNG7iRcbH2XylgE3xJ8DlmRPyWxbR6mlFK
+nciuAOtvBzDF3EO6ar9MFXcR/Fuv3gH825FXDqWD6RRfLxqI7j+Naj7HATTbpnQx
+PCeIeA8A0hwvvxzHMpncMGoklTae3gIo4uqsygpnXW4/2FaQJ60o9L/dMoVzXfNN
+G0c4dbn4NMgK8emJB4G7N6EcAxTYRz/5V8waIvZS3i+zc2smOSlMDCZCL2YmfzJk
+X88fC2djHwBW6T5nn+rcOmEim8SPQkLoAv2ghFbL81dcD3fF2m8/n7tOSh1LpzMM
+Wy9l6p3v2SJ5QAizf4XAp5gFqwGV/xVxXuEi+xyDmbNfjy5o1IbWG4se9Iq/tH4p
+p/x6BuMdZcnb4dh9S0Bo
+=awUl
 -----END PGP SIGNATURE-----
