@@ -1,0 +1,7 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/binutils-2.23.51.0.9.ebuild,v 1.1 2013/02/03 06:30:51 vapier Exp $
+
+PATCHVER="1.0"
+ELF2FLT_VER=""
+inherit toolchain-binutils
