@@ -1,15 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD logger-0.ebuild 828 SHA256 8f77925007d8fcab134f182bc488c2f189422c18b6a20eae0707ab8982f9429f SHA512 620a016a780e8cf573194f629f460abf3da4a03604dd5a26b46ed1e101de78cd663171e067f7481e0fb1e6c90c8863b9ebadd7adec20e9ea798893b809d3d4c6 WHIRLPOOL 0af0a317a292ef42e4d7f1cb53010cdcbcb63a0e9366ae15ae6544795c67af16550664acf8ce706ba7555a8e01b2cecf177f22363d73828a64f980cffbb8d4e5
-MISC ChangeLog 617 SHA256 dfa2784ef62729bf9fab95920b54003c690828ea12f3a0c28bc86c98568696e2 SHA512 ef0a09b3988fffb9060c4e918bedbac3b00d877af2ca74fdba34945362f7046e7c7baee1350df93c27a94b9ccdb6c986e618775de3615ec8605b18a2ee47dc6b WHIRLPOOL 85b3d669ade84872ae20d5dc7fa868aac9d94211a4f531653020896b2830672e5e029342d1f1f3b79ee83468f9d3b38cb23f8f21750bd5a0cb380f0266b30503
+EBUILD logger-0.ebuild 799 SHA256 8adf5fa239d22308dc5f0056ba9dc78b967c9cad32744546f3d8d4bfa7ae6796 SHA512 1eb77b7c355269b96c81daf892b003e9b9e1f5626c830f821e55766b954190a606b303b7116f526fd80dc0a7429305a4c6912d67a5f0c7e5db45703000e047c7 WHIRLPOOL 73c5d9a42e85942de86cd93a3bd19985b31eacd340a75f2cf0e8a4a3c6a1f8353779530de99496654e07c43200a717e65c2c25ecb4e75173bad746dc6ff59a39
+MISC ChangeLog 773 SHA256 619d515d12bd888302f84042c43610a995c9416f8f05153dc0d349123f5dba7a SHA512 2fa34df14fd6c54ec83427b955f41a3f0afda39a5e6cfd319878fd07700b217aeed58deda0091c8296890371105b3e79e446fb77c623247f9ddef804e9902072 WHIRLPOOL 1186d872bfbb04ccc0e2026048eb2b0f47912b1b93f34f4db6e26432a12799b8532b4adf0b3e6dc0e671365f158ce6ff2611878299871283b53f395144db97e0
 MISC metadata.xml 260 SHA256 1c1af847a914ae1b874b04f922412ae6f3c6fb33b5e8d8eb2ccf1b453f92c7f2 SHA512 c35d1848db39e3a52d9ca17edaeca4e58528e38f3ea2a523deaeb6eb630720e272a8fd4e20b33e6ab0edfd64b2ac4505e64ef556ba6cf40cb5075705476f9937 WHIRLPOOL c33413e825a10b8b681c1733163f954813a4b155f2d2347aeade9616c7a305ebdaf51ce1c42e1e8394b55e44a875bf791b729bd177f4351645f9ba99adc628ea
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAlAzhC8ACgkQIaLonLtsQscm7AQAyZJ654FMuVxrUCa2yiJc4huI
-Kz1THBgmiFoz/Qhb+V0vCIwDbcJiYQZGFqFpa+OmfNE/AyEzbVgA8OwnnWu63G2A
-xBOZ+qfS6IjuyvZ3FFCeS3ENupLh1RPy4MpcRfYO/OO37SjtqUbPa0KfHhtHgV+s
-Mqkh7uZv0mHSsv0Bjqs=
-=6hGX
+iQIcBAEBCAAGBQJRDfadAAoJELEHsLL7fEFWKPcP/RK7aNfSyaq6H/NHdFUXjlFi
+JXwrsgeG1gSn4KyZM59ASITMIJkH3MlR4HqessdLAzxTEBbDndQV0yxONOOOKyJA
+0czwqpxt6D6+mgJ4SNZe9q91eiwcIBxaKtFa/1qK/bPE+P+qsX7BODc6AwosjwoJ
+33tO4Z4fMMBHrqm0Tjv8D6fR/wlAue4RnYEPZ8GHhHyavt3DlrNnAUDLz4DVP3mj
+fWQbL/B7eIsJZ7OEZcF4I6kIVpcSnD9E30XYSYnIY+dSys2BhzJvjiezc8TeQHYM
+vlSXoi6K3/2+SQKJb/bOOoIToeeakeBs8o1a1TRgeGU3+nBTTuUJiC6TPCx9viNX
+D7Ap+9SxDYWoRUeQUF43v7rYA7i8b1ZADPXNEUgp3I77/TCIhJfZ24UJSPUfLS6j
+ktnWX6IQGQIogfVhdEC/cpgYwAcxoxc078xNtiwmaQuh3FEbQxwJ+BWdJZvs0BDP
+yMRzwH0eBLUpoObPC2qvOQK5N0VtWQKeMKmbe/WShn9ZKkA+p4y63g2MWMq0spwx
+kWyIah0cvWja4pt80JQq8CNuaNhvvzaWAqmY79UaWoxT/iOFsriDADnnhqohRdWp
+jr2ko/Nhv9xOaRbJ8EUtcInq1O0mIjVO2O6M23PvyKnoQc0zjpbsrv8laqiBQlfs
+Oa9Em3vgVQ5jkFYdcYbw
+=k/Pf
 -----END PGP SIGNATURE-----
