@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/logger/logger-0.ebuild,v 1.3 2012/08/21 12:50:50 sbriesen Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/logger/logger-0.ebuild,v 1.4 2013/02/03 05:33:13 vapier Exp $
 
 DESCRIPTION="Virtual for system loggers"
 HOMEPAGE=""
@@ -12,12 +12,12 @@ KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~ppc-
 IUSE=""
 
 DEPEND=""
-RDEPEND="|| ( app-admin/metalog
+RDEPEND="|| (
+	app-admin/metalog
 	app-admin/rsyslog
 	app-admin/socklog
 	app-admin/sysklogd
 	app-admin/syslog-ng
 	app-admin/syslogread
-	app-admin/busybox-sysklogd
 	sys-freebsd/freebsd-usbin
 )"
