@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/binutils
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.476 2012/12/29 20:58:39 vapier Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.477 2013/02/03 06:30:51 vapier Exp $
+
+*binutils-2.23.51.0.9 (03 Feb 2013)
+
+  03 Feb 2013; Mike Frysinger <vapier@gentoo.org> +binutils-2.23.51.0.9.ebuild:
+  Version bump.
 
 *binutils-2.23.51.0.8 (29 Dec 2012)
 
